<resources>
    <string name="app_name">My Application</string>
    <string name="explorer">Explorer</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>